--- a/package.json
+++ b/package.json
@@ -29,11 +29,21 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended",
       "@vue/prettier"
     ],
-    "rules": {},
+    "rules": {
+      "max-lines": [
+        "error",
+        {
+          "max": 150,
+          "skipComments": true,
+          "skipBlankLines": true
+        }
+      ],
+      "no-console": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
